# CivicTech

./: .gitignore  DEPLOYMENT.md  Dockerfile  Home.py  README.md  ai_engine.py  auth_session.py  cases.db  check_ollama.py  comparison_app.py  config.toml  config_loader.py  db_manager.py  doc_integrity.py  docker-compose.yml  health_check_output.txt  migrate_db.py  migrate_db_archive.py  migrate_status.py  move_files.py  paddle_ocr.py  patch_toc_detection.py  requirements.txt  reset_admin_tool.py  run.bat  run_meal_test.bat  start-all.bat  start-all.ps1  system_health_check.py  test_pdf_conversion.py  utils.py  首頁.py
fire_dept_automation/: .env.example  .gitignore  DEPLOYMENT.md  Homeindex.html  README.md  ai_engine.py  auth.py  auth_session.py  comparison_app.py  config.toml  db_manager.py  db_manager_broken.py.bak  deep_debug_smtp.py  download_script.py  health_check_result.txt  home.py  init_new_tables.py  ngrok.yml  patch_add_model_selector.py  patch_add_ocr_selector.py  patch_ocr_display.py  patch_ocr_execution.py  project_context.md  proposal_platform_draft.html  pyproject.toml  quick_smtp_test.py  requirements.txt  reset_admin_tool.py  run.bat  run_meal_test.bat  setup_paddle.py  sidebar_nav.py  test_email_send.py  test_ollama.py  test_output.txt  test_output_2.txt  test_smtp_ports.py  utils.py
fire_dept_automation/.streamlit/: config.toml  pages.toml
fire_dept_automation/ocr_system/: README.md  compare.py  deskew.py  install.bat  llm_corrector.py  main.py  paddle_ocr.py  report.py  requirements.txt  test_ocr_result.json
fire_dept_automation/pages/: 1_disaster_prevention_museum_booking.py  2_community_meal_delivery.py  2_社區互助送餐.py  3_民眾申辦與進度查詢.py  (+4 more)
(+114 files in other folders)
