[project]
name = "fire-dept-automation"
version = "1.0.0"
description = "臺東縣消防局檢修申報系統 - Fire Department Automation System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.1.4",
    "pillow>=10.2.0",
    "pymupdf>=1.23.8",
    "pytesseract>=0.3.10",
    "bcrypt>=4.1.2",
    "secure-smtplib>=0.1.1",
    "line-bot-sdk>=3.9.0",
    "tomli>=2.0.1",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "streamlit-calendar",
    "extra-streamlit-components",
]

[project.optional-dependencies]
ocr = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
